@@ -4,6 +4,8 @@ glibc (2.23.90+20160507.87523e9-2) UNRELEASED; urgency=medium
   * patches/hurd-i386/cvs-PTR_MANGLE.diff: New patch to fix build.
   * patches/hurd-i386/submitted-malloc-setstate.diff: New patch to fix
     malloc_setstate.
+  * testsuite-xfail-debian.mk: Update hurd-i386 testsuite results, no actual
+    regression.
 
   [ Aurelien Jarno ]
   * debian/testsuite-xfail-debian.mk: allow conform/XPG3/sys/stat.h
